@@ -1,7 +1,11 @@
 Unreleased
 ----------
 
-- ...
+- Improved logging output now includes a timestamp.
+
+- Worked around (probable) bug in stdlib email parser where a message part
+  might have a charset set in the 'Content-Type' header, but
+  message.get_charset() returns None.
 
 0.9 (2011-04-15)
 ----------------
